# make_contiguous_objects

./: CMakeLists.txt  README.md
include/: memory.hpp
include/make_contiguous_objects/: mco.hpp
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  basic.test.cpp  shared_array.test.cpp
